:lipstick: Fix header styling on mobile

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     padding: 2em 5em;
+    justify-content: flex-end;
 }
 
 .Header > .normal-link > img {
@@ -12,5 +13,6 @@
 @media only screen and (max-width: 900px) {
     .Header {
         padding: 1em;
+        justify-content: center;
     }
 }
